<resources>
    <string name="app_name">Calculator</string>
    <string name="operand1">Первый операнд:</string>
    <string name="operand2">Второй операнд:</string>
    <string name="operation">Операция:</string>
    <string name="operation_hint">+,-,*,/,^</string>
    <string name="btn_text">Посчитать</string>
    <string name="result_text">Результат:</string>

    <string name="some_error">Ошибка! Проверьте введенные данные</string>
    <string name="unknown_error">Некорректная операция!!</string>
</resources>
