<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:id="@+id/main">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operand1"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        />
    <EditText
        android:id="@+id/op1"
        android:inputType="number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textSize="24sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operation"
        android:textSize="24sp"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/oper"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/operation_hint"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textSize="24sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operand2"
        android:textSize="24sp"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/op2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:inputType="number"
        android:gravity="center"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="12dp"
        />
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />
</androidx.appcompat.widget.LinearLayoutCompat>